--- a/VagrantFile
+++ b/VagrantFile
@@ -7,7 +7,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 # config.ssh.insert_key = false
   config.vm.box = "ubuntu/trusty64"
   config.vm.provision "docker" do |d|
-    d.run "vfarcic/cd_jenkins",
+    d.run "tonybutton/ci-cd-examples",
       args: "-d -p 0.0.0.0:49153:8080"
   end
   config.vm.network :forwarded_port, host: 4567, guest: 49153
